Add flat-ui and bootstrap-sass

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -292,6 +292,7 @@ ja:
   active: "作業中"
   finished: "完了"
   dashboard: "ダッシュボード"
+  new_user: "新規ユーザー"
   new_practice: "新規プラクティス"
   256interns: "256 INTERNS"
   users: "ユーザー"
@@ -310,3 +311,6 @@ ja:
   editing_practice: "編集"
   show: "表示"
   back: "戻る"
+  invalid_email_or_password: "ユーザー名かパスワードが違います。"
+  sign_in_successful: "サインインしました。"
+  sign_out: "サインアウトしました。"
