--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -11,15 +11,16 @@ en:
     error_notification:
       default_message: "Please review the problems below:"
     # Labels and hints examples
-    labels:
-      defaults:
-        password: 'Password'
-      user:
-        new:
-          email: 'E-mail to sign in.'
-        edit:
-          email: 'E-mail.'
-    hints:
-      defaults:
-        username: 'User name to sign in.'
-        password: 'No special characters, please.'
+    # labels:
+    #   defaults:
+    #     password: 'Password'
+    #   user:
+    #     new:
+    #       email: 'E-mail to sign in.'
+    #     edit:
+    #       email: 'E-mail.'
+    # hints:
+    #   defaults:
+    #     username: 'User name to sign in.'
+    #     password: 'No special characters, please.'
+
