Change button design

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -324,3 +324,4 @@ ja:
   sign_out: "サインアウトしました。"
   registration successfull: "サインアップしました。"
   user_was_successfully updated: "ユーザーを更新しました。"
+  complete: '完了'
