--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -257,7 +257,8 @@ ja:
       practice:
         title: "タイトル"
         description: "内容"
-        aim: 対象
+        goal: "終了条件"
+        target: "ターゲット"
 
       comment:
         body: 本文
@@ -335,6 +336,12 @@ ja:
   sign_out: "サインアウトしました。"
   registration_successfull: "サインアップしました。"
   user_was_successfully_updated: "ユーザーを更新しました。"
-  practice_was_successfully_updated: "ユーザーを更新しました。"
-  complete: '完了'
-  for: '%{target} 課題'
+  practice_was_successfully_created: "プラクティスを作成しました。"
+  practice_was_successfully_updated: "プラクティスを更新しました。"
+  practice_was_successfully_deleted: "プラクティスを削除しました。"
+  complete: "完了"
+  for: "%{target} 課題"
+  for_everyone: "共通"
+  for_programmer: "プログラマー向け"
+  for_designer: "デザイナー向け"
+  all: "全て"
