--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -349,5 +349,5 @@ ja:
   for_designer: "デザイナー向け"
   all: "全て"
   how_256interns_works: "256インターンとは"
-  completed_users: 'プラクティスを完了したユーザー一覧'
-  completed_practices: '終了した課題一覧'
+  completed_users: "プラクティスを完了したユーザー一覧"
+  completed_practices: "完了したプラクティス"
