change practice-status-button text

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -309,9 +309,11 @@ ja:
   edit: "編集"
   destroy: "削除"
   save: "保存"
-  unstarted: "未着手"
-  started: "作業中"
+  unstarted: "開始"
+  started: "完了"
   finished: "完了"
+  complete: "済"
+  practice_status_reset_confirmation: "未着手状態に戻しますがよろしいですか？"
   dashboard: "ダッシュボード"
   new_user: "新規ユーザー"
   new_practice: "新規プラクティス"
@@ -342,7 +344,6 @@ ja:
   practice_was_successfully_created: "プラクティスを作成しました。"
   practice_was_successfully_updated: "プラクティスを更新しました。"
   practice_was_successfully_deleted: "プラクティスを削除しました。"
-  complete: "完了"
   for: "%{target} 課題"
   for_everyone: "共通"
   for_programmer: "プログラマー向け"
