add list of active practices to user page

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -352,3 +352,4 @@ ja:
   how_256interns_works: "256インターンとは"
   completed_users: "プラクティスを完了したユーザー一覧"
   completed_practices: "完了したプラクティス"
+  active_practices: "進行中のプラクティス"
