--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -301,10 +301,10 @@ ja:
   edit: "編集"
   destroy: "削除"
   save: "保存"
+  not_complete: "未完"
   unstarted: "開始"
-  started: "完了"
-  finished: "完了"
-  complete: "済"
+  complete: "完了"
+  started: "着手"
   practice_status_reset_confirmation: "未着手状態に戻しますがよろしいですか？"
   hide_completed: "完了済みプラクティスを隠す"
   show_completed: "完了済みプラクティスを表示"
