--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -330,9 +330,11 @@ ja:
   listing_companies: "会社一覧"
   listing_categories: "カテゴリー一覧"
   companies: "会社"
+  categories: "カテゴリー"
   editing_practice: "プラクティス編集"
   editing_company: "会社編集"
   editing_user: "アカウント情報編集"
+  editing_category: "カテゴリー編集"
   show: "表示"
   back: "戻る"
   invalid_email_or_password: "ユーザー名かパスワードが違います。"
