--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -377,5 +377,5 @@ ja:
   i_want_to_find_job_assist: "フィヨルドの就職支援を希望する"
   i_do_not_want_to_find_job_assist: "フィヨルドの就職支援を希望しない"
   we_will_find_rails_job_by_our_best: "（町田、駒形が知り合いのrailsを使った会社や知り合いの就職支援サイトなどを駆使して全力で就職先探しをサポートします）"
-  active_users: "アクティブユーザー"
-  inactive_users: "最近活動の無いユーザー"
+  active_users: "アクティブユーザー (%{count})"
+  inactive_users: "最近活動の無いユーザー (%{count})"
