Add user's practice

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -349,7 +349,9 @@ ja:
   editing_category: "カテゴリー編集"
   show: "表示"
   back: "戻る"
+  "bob's_practices": "%{name}のプラクティス"
   invalid_email_or_password: "ユーザー名かパスワードが違います。"
+  status_for_all_practices: "全てのプラクティスの状態"
   sign_in_successful: "サインインしました。"
   sign_out: "サインアウトしました。"
   registration_successfull: "サインアップしました。"
