Add prgress bars

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -338,6 +338,7 @@ ja:
   designer: "デザイナー"
   everyone: "共通"
   listing_users: "ユーザー一覧"
+  listing_courses: "コース一覧"
   listing_practices: "プラクティス一覧"
   listing_companies: "会社一覧"
   listing_categories: "カテゴリー一覧"
@@ -370,6 +371,7 @@ ja:
   all: "全て"
   all_user: "全員"
   how_256interns_works: "256インターンとは"
+  completed: "完了"
   completed_users: "プラクティスを完了したユーザー一覧"
   completed_practices: "完了したプラクティス"
   active_practices: "進行中のプラクティス"
