--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,7 +7,7 @@
 ja:
   date:
     formats:
-      default: "%Y/%m/%d"
+      default: "%Y年%m月%d日"
       short: "%m/%d"
       long: "%Y年%m月%d日(%a)"
 
@@ -178,6 +178,7 @@ ja:
         created_at: "インターン開始日"
         updated_at: "最終活動日時"
         part: "パート"
+        nda: 秘密保持契約に同意する
 
       learning:
         status: "ステータス"
@@ -264,6 +265,7 @@ ja:
         company: "会社"
         created_at: "インターン開始日時"
         updated_at: "最終活動日時"
+        nda: 秘密保持契約
 
       practice:
         title: "タイトル"
