--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -189,6 +189,10 @@ ja:
         description: "詳細"
         website: "ウェブサイト"
 
+      report:
+        title: "タイトル"
+        description: "内容"
+
   errors:
     format: "%{attribute} %{message}"
 
@@ -222,6 +226,7 @@ ja:
       practice: "プラクティス"
       company: "会社"
       comment: "コメント"
+      report: "日報"
 
     enums:
       user:
@@ -278,6 +283,10 @@ ja:
         description: "詳細"
         website: "ウェブサイト"
 
+      report:
+        title: "タイトル"
+        description: "内容"
+
     errors:
       template:
         header:
@@ -328,6 +337,9 @@ ja:
   new_user: "新規ユーザー"
   new_company: "新規会社"
   new_practice: "新規プラクティス"
+  new_report: "日報の新規作成"
+  created_by: "created by "
+  updated_by: "updated by "
   256interns: "256 INTERNS"
   users: "ユーザー"
   my_practices: "マイプラクティス"
@@ -344,6 +356,7 @@ ja:
   listing_users: "ユーザー一覧"
   listing_courses: "コース一覧"
   listing_practices: "プラクティス一覧"
+  reports: "日報"
   listing_companies: "会社一覧"
   listing_categories: "カテゴリー一覧"
   companies: "会社"
@@ -352,6 +365,7 @@ ja:
   editing_company: "会社編集"
   editing_user: "アカウント情報編集"
   editing_category: "カテゴリー編集"
+  editing_report: "日報の編集"
   show: "表示"
   back: "戻る"
   "bob's_practices": "%{name}のプラクティス"
@@ -367,6 +381,9 @@ ja:
   company_was_successfully_created: "会社を作成しました。"
   company_was_successfully_updated: "会社を更新しました。"
   company_was_successfully_deleted: "会社を削除しました。"
+  report_was_successfully_created: "日報を作成しました。"
+  report_was_successfully_updated: "日報を更新しました。"
+  report_was_successfully_deleted: "日報を削除しました。"
   learning_users: "学習中ユーザー"
   for: "%{target} 課題"
   for: "%{target} 課題"
