--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -252,12 +252,9 @@ ja:
       company: "会社"
       comment: "コメント"
       report: "日報"
-<<<<<<< HEAD
       page: "Wiki"
       question: "Q&A"
-=======
       contact: "インターン申し込みフォーム"
->>>>>>> complete form
 
     enums:
       user:
@@ -345,14 +342,13 @@ ja:
         title: タイトル
         body: 本文
 
-<<<<<<< HEAD
       question:
         title: タイトル
         description: 詳細
 
       answer:
         description: 詳細
-=======
+
       contact:
         name: "名前"
         name_phonetic: "名前（フリガナ）"
@@ -370,7 +366,6 @@ ja:
         github_account: "Githubアカウント"
         application_reason: "志望理由"
         user_policy_agreed: "個人情報の取り扱いについて"
->>>>>>> complete form
 
     errors:
       template:
@@ -520,26 +515,15 @@ ja:
   inactive_users: "最近活動の無いインターン (%{count})"
   action: 操作
   order: 並び順
-<<<<<<< HEAD
-<<<<<<< cbec16c97dec17d448fb9f255b948cf1b8986801
   related-reports: 関連した日報
   search_report: 日報検索
   search_for: "'%{text}' の検索結果"
-<<<<<<< HEAD
   q_and_a: "Q & A"
   action: 操作
   order: 並び順
   solved: 解決済み
   unsolved: 未解決
-=======
-=======
-=======
   related-reports: このチュートリアルに関する日報
->>>>>>> wip
->>>>>>> wip
-=======
-  related-reports: このチュートリアルに関する日報
->>>>>>> 検索機能を取り込んだ
   to_index_of_reports: 日報一覧へ
   post_comment: コメントを投稿
   interns: インターン一覧
@@ -547,8 +531,10 @@ ja:
   login_name_description: チャットやSNS（Twitter、Github、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。
   email_description: このメールアドレスは卒業後の連絡にも使うので、会社で提供されたなどの第三者によって提供されたメールアドレスではなく、転職後も使い続ける自分自身で取得したメールアドレスで登録してください。
   questions: Q&A
-<<<<<<< HEAD
-=======
   search_report: 日報検索
   search_for: "'%{text}' の検索結果"
->>>>>>> 検索機能を取り込んだ
+  q_and_a: "Q & A"
+  action: 操作
+  order: 並び順
+  solved: 解決済み
+  unsolved: 未解決
