--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -376,10 +376,10 @@ ja:
   updated_by: "updated by "
   comments: "コメント"
   256interns: "256 INTERNS"
-  users: "ユーザー"
-  my_practices: "マイプラクティス"
+  users: "Interns"
+  my_practices: "My Practices"
   activities: "アクティビティ"
-  practices: "プラクティス"
+  practices: "Practices"
   names_practices: "%{name}'s Practices"
   enter_for_intern: "インターンシップを申し込む"
   continue: "コンティニュー"
