Add comments in Reports

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -346,6 +346,7 @@ ja:
   new_report: "日報の新規作成"
   created_by: "created by "
   updated_by: "updated by "
+  comments: "コメント"
   256interns: "256 INTERNS"
   users: "ユーザー"
   my_practices: "マイプラクティス"
@@ -363,6 +364,9 @@ ja:
   listing_courses: "コース一覧"
   listing_practices: "プラクティス一覧"
   reports: "日報"
+  report_comments_any: "コメント"
+  comments_count: "件"
+  blank: " "
   listing_companies: "会社一覧"
   listing_categories: "カテゴリー一覧"
   companies: "会社"
@@ -372,6 +376,7 @@ ja:
   editing_user: "アカウント情報編集"
   editing_category: "カテゴリー編集"
   editing_report: "日報の編集"
+  editing_comment: "コメントの編集"
   new_category: "カテゴリー追加"
   show: "表示"
   back: "戻る"
@@ -391,6 +396,9 @@ ja:
   report_was_successfully_created: "日報を作成しました。"
   report_was_successfully_updated: "日報を更新しました。"
   report_was_successfully_deleted: "日報を削除しました。"
+  comment_was_successfully_created: "コメントを投稿しました。"
+  comment_was_successfully_updated: "コメントを更新しました。"
+  comment_was_successfully_deleted: "コメントを削除しました。"
   category_was_successfully_created: "カテゴリーを作成しました。"
   category_was_successfully_updated: "カテゴリーを更新しました。"
   category_was_successfully_deleted: "カテゴリーを削除しました。"
