wikiページ機能を追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -297,6 +297,10 @@ ja:
         title: "タイトル"
         description: "内容"
 
+      page:
+        title: タイトル
+        body: 本文
+
     errors:
       template:
         header:
