--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -30,6 +30,7 @@ ja:
       date_default: "%Y年%m月%d日"
       date_short: "%m/%d"
       date_long: "%Y年%m月%d日(%a)"
+      date_long_with_time: "%Y年%m月%d日(%a) %H:%M"
     am: "午前"
     pm: "午後"
 
