Add password reset function

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -343,6 +343,16 @@ ja:
   logout: "ログアウト"
   please_sign_in_first: "ログインしてください"
   please_sign_in_as_admin: "管理者としてログインしてください"
+  greeting: "こんにちは、%{recipient}さん"
+  forgot_password: "パスワードを忘れた方はこちら"
+  reset_my_password: "パスワードをリセットする"
+  your_password_has_been_reset: "パスワードの再設定について"
+  instruction_have_been_sent: "パスワードの再設定についてのメールを送信しました"
+  password_was_successfully_updated: "パスワードが正しく変更されました"
+  someone_wanted_to_reset_the_password: "誰かがパスワードの再設定を希望しました"
+  if_you_did_not_wish_please_disregard_this_email: "あなたが希望したのではないのなら、このメールは無視してください"
+  the_password_will_not_be_changed_until_you_access_the_link_above_and_set_a_new_password: "上のリンクにアクセスして新しいパスワードを設定するまで、パスワードは変更されません"
+  choose_a_new_password: "パスワードを変更する"
   are_you_sure: "本当によろしいですか？"
   start: "スタート"
   edit: "編集"
