--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -436,4 +436,6 @@ ja:
   inactive_users: "最近活動の無いユーザー (%{count})"
   action: 操作
   order: 並び順
+  search: 検索
+  search_by_practice: プラクティス検索
   related-reports: 関連した日報
