--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -26,7 +26,8 @@ ja:
     formats:
       default: "%Y/%m/%d %H:%M:%S"
       short: "%y/%m/%d %H:%M"
-      long: "%Y年%m月%d日 %H時%M分%S秒"
+      long: "%Y年%m月%d日(%a) %H時%M分%S秒"
+      semi_long: "%Y年%m月%d日(%a) %H:%M"
       date_default: "%Y年%m月%d日"
       date_short: "%m/%d"
       date_long: "%Y年%m月%d日(%a)"
@@ -376,7 +377,6 @@ ja:
   reports: "日報"
   report_comments_any: "コメント"
   comments_count: "件"
-  blank: " "
   listing_companies: "会社一覧"
   listing_categories: "カテゴリー一覧"
   companies: "会社"
