質問のタイトルを保存前に検証する

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -232,6 +232,8 @@ ja:
       company: "会社"
       comment: "コメント"
       report: "日報"
+      page: "Wiki"
+      question: "Q&A"
 
     enums:
       user:
