--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -216,6 +216,7 @@ ja:
         blog_url: "ブログURL"
         github_account: "Githubアカウント"
         application_reason: "志望理由"
+        purpose: "目的"
         user_policy_agreed: "個人情報の取り扱いについて"
 
   errors:
@@ -363,6 +364,8 @@ ja:
         blog_url: "ブログURL"
         github_account: "Githubアカウント"
         application_reason: "志望理由"
+        purpose_content: "目的の内容"
+        purpose_deadline: "目的の期限"
         user_policy_agreed: "個人情報の取り扱いについて"
 
 
