--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -431,6 +431,7 @@ ja:
   created_by: "created by "
   updated_by: "updated by "
   comments: "コメント"
+  check: "チェック"
   256interns: "256 INTERNS"
   users: "インターン"
   my_practices: "マイプラクティス"
@@ -491,6 +492,7 @@ ja:
   category_was_successfully_updated: "カテゴリーを更新しました。"
   category_was_successfully_deleted: "カテゴリーを削除しました。"
   contact_was_successfully_created: "お申込みを受け付けました。"
+  report_was_successfully_check: "レポートをチェックしました。"
   learning_users: "学習中インターン"
   for: "%{target} 課題"
   for: "%{target} 課題"
@@ -526,6 +528,7 @@ ja:
   related-reports: このチュートリアルに関する日報
   to_index_of_reports: 日報一覧へ
   post_comment: コメントを投稿
+  check_report: このレポートをチェックする
   interns: インターン一覧
   admin_interns: インターン情報
   login_name_description: チャットやSNS（Twitter、Github、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。
