Report確認時Slackへ飛ばす機能を実装。

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -431,7 +431,8 @@ ja:
   created_by: "created by "
   updated_by: "updated by "
   comments: "コメント"
-  check: "チェック"
+  check: "確認者"
+  check_count: "名"
   256interns: "256 INTERNS"
   users: "インターン"
   my_practices: "マイプラクティス"
