プラクティス個別ページに完了ボタンを追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -501,6 +501,7 @@ ja:
   all_user: "全員"
   how_256interns_works: "256インターンとは"
   completed: "完了"
+  notice_completed_practice: "このプラクティスを完了しました。"
   completed_users: "完了したインターン"
   completed_practices: "完了したプラクティス"
   active_practices: "進行中のプラクティス"
