提出物に対してのレビューを表示する

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -434,6 +434,7 @@ ja:
   are_you_sure: "本当によろしいですか？"
   start: "スタート"
   edit: "編集"
+  edited: "編集済"
   destroy: "削除"
   save: "保存"
   not_complete: "未完"
@@ -463,6 +464,7 @@ ja:
   updated_by: "updated by "
   comments: "コメント"
   submission_title: "提出した課題の内容"
+  review_title: "レビュー"
   task_zip_download: "課題ファイルをダウンロード"
   check: "確認者"
   check_count: "名"
